--- a/hackerrank.yml
+++ b/hackerrank.yml
@@ -2,7 +2,7 @@ version: 1.0
 configuration:
   has_webserver: true
   scoring:
-    command: npm install && rm -rf ./junit.xml && ./node_modules/.bin/react-scripts test --watchAll=false --verbose --env=jsdom --testResultsProcessor ./node_modules/jest-junit
+    command: "npm test"
     files:
       - junit.xml
   readonly_paths:
