--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "presto",
+  "name": "hackerrank-sample-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^11.2.7",
     "cra-template": "1.1.2",
+    "create-react-app": "^1.4.3",
+    "h8k-components": "^1.0.0",
+    "h8k-design": "^1.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "save": "^2.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "cross-env HOST=0.0.0.0 PORT=8000 ./node_modules/.bin/react-scripts start",
+    "pretest": "npm install",
+    "prestart": "npm install",
+    "test": "cross-env CI=true ./node_modules/.bin/react-scripts test --verbose --env=jsdom --testResultsProcessor ./node_modules/jest-junit"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "cross-env": "^7.0.2",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "expect": "^21.2.1",
+    "jest-junit": "^3.3.0",
+    "@testing-library/jest-dom": "^5.15.1"
   },
   "browserslist": {
     "production": [
@@ -35,8 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.15.1"
   }
 }
